modification de chaque fichier

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>registration</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/css/registration.css">
 </head>
 <body class="body_registration">
 <section class="container_registration">
@@ -15,7 +16,6 @@
         </div>
         <a href=""><img src="assets/images/resi/Image%202345%20(1).png" alt="logo de registration"></a>
      </section>
-    
     <div class="picture">
         <div class="images"><img src="assets/images/resi/Group%20200%20(1).png" alt=""></div>
         <div class="container">
@@ -23,15 +23,15 @@
                 <h1>Create an account</h1>
                 <p>Star your 30 day free trial</p>
                 <div class="button">
-                    <button class="btn1">
+                    <div class="btn btn1">
                         <a href="https://google.com"><img src="assets/images/picture/google-logo-rouge.png" alt=""></a>
-                    </button>
-                    <button class="btn2">
+                    </div>
+                    <div class="btn btn2">
                         <a href="https://facebook.com"><img src="assets/images/picture/logo-facebook.png" alt=""></a>
-                    </button>
-                    <button class="btn3">
+                    </div>
+                    <div class="btn btn3">
                         <a href="#"><img src="assets/images/picture/Apple-logo.png" alt=""></a>
-                    </button>
+                    </div>
                 </div>
                 <div class="text-box">
                     <form action="" method="post">
@@ -49,7 +49,7 @@
                                 <div class="i_input">
                                     <input type="password" id="password" placeholder="Mot de passe" name="password">
                                 </div>
-                                <img src="assets/images/mot_de_passe/cache_icons8-hide-24.png" id="toggle-password" alt="">
+                                <img src="assets/images/mot_de_passe/masquer.png" id="eye" onclick="changer()" alt="">
                             </div>
                         </div>
                     </form>
