--- a/dashboard.html
+++ b/dashboard.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>dashboard</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/dashboard.css">
+    <link rel="stylesheet" href="assets/css/sidebar.css">
+    <link rel="stylesheet" href="assets/css/footer_menu.css">
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-<div class="w3-sidebar w3-bar-block w3-sidebar " style="width:18%;height: 100vh;background-color: white">
+<div class="w3-sidebar w3-bar-block w3-sidebar">
     <div class="sidebar-head">
         <a href="index.html">
             <img src="assets/images/picture/prim-logo.png" alt="">
@@ -58,8 +61,6 @@
                 </li>
             </ul>
         </div>
-
-        <!--    *******************-->
         <div class="sidebar-images">
             <img src="assets/images/picture/Avatar%201674-button.png" alt="">
             <div class="text">
@@ -69,52 +70,52 @@
         </div>
     </div>
 </div>
-<!--**********************************************-->
-
-<section  class="corps" style="margin-left:18%">
-    <div class="container">
-        <h1>Dashboard</h1>
-        <div class="button" style="margin-right: 0">
-            <button class="button-1"><img src="assets/images/picture/plus-math-24.png" alt="">Create new project</button>
-            <button class="button-2"><img style="width: 15px" src="assets/images/picture/share-24.png" alt="">Share</button>
+<main>
+    <section class="dashboard-container">
+        <div class="container">
+            <h1>Dashboard</h1>
+            <div class="btn-toggle">
+                <div class="button click" style="margin-right: 0">
+                    <button class="btn-nav button-1"><img src="assets/images/picture/plus-math-24.png" alt="">Create new project</button>
+                    <button class="btn-nav button-2"><img style="width: 15px" src="assets/images/picture/share-24.png" alt="">Share</button>
+                </div>
+                <div class="toggle">
+                    <i class="fa-solid fa-bars ouvrir"></i>
+                    <i class="fa-solid fa-xmark fermer"></i>
+                </div>
+            </div>
         </div>
-<!--*********-->
-        <button class="nav_bar">
-            <img src="assets/images/image_responsive/Button%203001.png" alt="">
-        </button>
-    </div>
-    <!--**********d-flex-A************-->
-    <div class="d-flex-A">
-        <div class="d-block">
-            <div class="column">
-                <div class="column-container-1">
-                    <div class="petit-titre">Data label</div>
+    </section>
+    <section class="dashboard-container dashboard-container-1">
+        <div class="first-part">
+            <div class="data-row">
+                <div class="data-column">
+                    <div class="small-title">Data label</div>
                     <h1>6,452</h1>
-                    <div class="pourcentage-1">
+                    <div class="percentage percentage-1">
                         <img src="assets/images/picture/Caret%20up%20extra%201.png" alt="">
                         5.39%
                     </div>
                 </div>
-                <div class="column-container-2">
-                    <div class="petit-titre">Data label</div>
+                <div class=" data-column data-column-2">
+                    <div class="small-title">Data label</div>
                     <h1>6,452</h1>
-                    <div class="pourcentage-2">
+                    <div class="percentage percentage-2">
                         <img src="assets/images/picture/Caret%20up%20extra%203.png" alt="">
                         0.65%
                     </div>
                 </div>
-                <div class="column-container-3">
-                    <div class="petit-titre">Data label</div>
+                <div class="data-column data-column-3">
+                    <div class="small-title">Data label</div>
                     <h1>6,452</h1>
-                    <div class="pourcentage-3">
+                    <div class="percentage percentage-1">
                         <img src="assets/images/picture/Caret%20up%20extra%201.png" alt="">
                         2.29%
                     </div>
                 </div>
             </div>
-
-            <div class="statistique">
-                <div class="stat-selected-column-bar">
+            <div class="statistic-container">
+                <div class="statistic-nav">
                     <div class="stat-selected">
                         <div class="stat">Statistics</div>
                         <div class="selected">
@@ -129,13 +130,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="column-bar-img">
-                    <img src="assets/images/picture/Column%20bar%20chart%2011.png" alt="">
+                <div class="statistic-img">
+                    <img class="img-block" src="assets/images/picture/Column%20bar%20chart%2011.png" alt="">
+                    <img class="img-none" src="assets/images/image_responsive/Column%20bar%20chart%2012.png" alt="">
                 </div>
-                <div class="column-bar-img_2">
-                    <img src="assets/images/image_responsive/Column%20bar%20chart%2012.png" alt="">
-                </div>
-                <div class="liste-chiffre">
+                <div class="statistic-numbers">
                     <div>1</div>
                     <div>2</div>
                     <div>3</div>
@@ -151,16 +150,16 @@
                 </div>
             </div>
         </div>
-        <div class="d-block-1">
-            <div class="big-container">
-                <div class="nav">
+        <div class="second-part">
+            <div class="activities-container">
+                <div class="activities-nav">
                     <h2>Activities</h2>
-                    <div class="dropdown" style="position: relative">
+                    <div class="dropdown">
                         <img src="assets/images/picture/left-icon.svg" alt="">
                         <form action="">
-                            <label for="date2"></label>
-                            <select name="date" id="date2">
-                                <option style="margin-left: 20px" value="date">Monthly</option>
+                            <label for="date"></label>
+                            <select name="date" id="date">
+                                <option>Monthly</option>
                                 <option value="date1">2023</option>
                                 <option value="date2">2024</option>
                                 <option value="date2">2025</option>
@@ -171,37 +170,36 @@
                         <p>See all</p>
                     </div>
                 </div>
-                <div class="container_image-texte">
-                    <div class="image-texte">
+                <div class="activities-row">
+                    <div class="row">
                         <img src="assets/images/picture/Avatar%201675%20(1).png" alt="">
                         <div class="text">
                             <h4>Kathryn Murphy</h4>
                             <p>ln eu do do cillum lorem exercitation ea dolor.</p>
-
                         </div>
                     </div>
-                    <div class="image-texte">
+                    <div class="row">
                         <img src="assets/images/picture/Avatar%201676-2.png" alt="">
                         <div class="text">
                             <h4>James Harrid</h4>
                             <p>Deserunt minim indidunt cillum nostrudo voluptate excepteur.</p>
                         </div>
                     </div>
-                    <div class="image-texte">
+                    <div class="row">
                         <img src="assets/images/picture/Avatar%201677-3.png" alt="">
                         <div class="text">
                             <h4>Elon Melon</h4>
                             <p>Mollit consectetur occaecat et ad ex deserunt fugiat.</p>
                         </div>
                     </div>
-                    <div class="image-texte">
+                    <div class="row">
                         <img src="assets/images/picture/Avatar%201678-4.png" alt="">
                         <div class="text">
                             <h4>Mia Smith</h4>
                             <p>Cupidatat eiusm d tempor labore amet amet proid nt duis.</p>
                         </div>
                     </div>
-                    <div class="image-texte">
+                    <div class="row row-none">
                         <img src="assets/images/picture/Avatar%201679-5.png" alt="">
                         <div class="text">
                             <h4>James Doe</h4>
@@ -209,11 +207,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="container_image_text_1">
-                    <div class="image-texte">
+                <div class="activities-row activities-row-2">
+                    <div class="row">
                         <img src="assets/images/image_responsive/Avatar%20001.png" alt="">
                         <div class="text">
-                            <div class="titre_p">
+                            <div class="text-container">
                                 <div class="times">
                                     <h4>Janne Cooper</h4>
                                     <div>12:00 PM</div>
@@ -222,10 +220,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="image-texte">
+                    <div class="row">
                         <img src="assets/images/image_responsive/Avatar%20002.png" alt="">
                         <div class="text">
-                            <div class="titre_p">
+                            <div class="text-container">
                                 <div class="times">
                                     <h4>James Harrid</h4>
                                     <div>11:37 PM</div>
@@ -237,10 +235,9 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!--**********d-flex-B************-->
-    <div class="d-flex-B">
-        <div class="table-stat">
+    </section>
+    <section class="dashboard-container dashboard-container-2">
+        <div class="dashboard-table">
             <h2>Recent orders</h2>
             <table>
                 <tr style="background-color:#FAFAFBFF">
@@ -252,7 +249,7 @@
                     <th></th>
                 </tr>
                 <tr>
-                    <td class="titre-left">Produit name</td>
+                    <td class="td-left">Produit name</td>
                     <td class="center">300</td>
                     <td class="center" >2</td>
                     <td class="center">600</td>
@@ -264,7 +261,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="titre-left">Produit name</td>
+                    <td class="td-left">Produit name</td>
                     <td class="center">300</td>
                     <td class="center">3</td>
                     <td class="center">$900</td>
@@ -276,7 +273,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="titre-left">Produit name</td>
+                    <td class="td-left">Produit name</td>
                     <td class="center">500</td>
                     <td class="center">2</td>
                     <td class="center">$1000</td>
@@ -289,61 +286,58 @@
                 </tr>
             </table>
             <div class="table_2">
-                <div class="icon">
+                <div class="row">
                     <div class="icon_p">
                         <img src="assets/images/image_responsive/Receipt%203.png" alt="">
                         <p>6 orders <span>to fulfill</span></p>
                     </div>
-                    <div class="phosphor_caret_right">
-                        <a href=""> <img src="assets/images/image_responsive/Caret%20right%209.png" alt=""></a>
+                    <div class="angle-right">
+                        <i class="fa-solid fa-angle-right"></i>
                     </div>
                 </div>
                 <hr>
-                <div class="icon">
+                <div class="row">
                     <div class="icon_p">
                         <img src="assets/images/image_responsive/Clipboard%20text%205.png" alt="">
                         <p>20 orders <span>to fulfill</span></p>
                     </div>
-                    <div class="phosphor_caret_right">
-                        <a href=""> <img src="assets/images/image_responsive/Caret%20right%209.png" alt=""></a>
+                    <div class="angle-right">
+                        <i class="fa-solid fa-angle-right"></i>
                     </div>
                 </div>
                 <hr>
-                <div class="icon">
+                <div class="row">
                     <div class="icon_p">
                         <img src="assets/images/image_responsive/Credit%20card%206.png" alt="">
                         <p>99 payments <span>to capture</span></p>
                     </div>
-                    <div class="phosphor_caret_right">
-                        <a href=""> <img src="assets/images/image_responsive/Caret%20right%209.png" alt=""></a>
+                    <div class="angle-right">
+                        <i class="fa-solid fa-angle-right"></i>
                     </div>
                 </div>
                 <hr>
-                <div class="icon">
+                <div class="row">
                     <div class="icon_p">
                         <img src="assets/images/image_responsive/Clipboard%20text%206.png" alt="">
                         <p>1 chargeback <span>to review</span></p>
                     </div>
-                    <div class="phosphor_caret_right">
-                        <a href=""> <img src="assets/images/image_responsive/Caret%20right%209.png" alt=""></a>
+                    <div class="angle-right">
+                        <i class="fa-solid fa-angle-right"></i>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="statistics">
+        <div class="statistics dashboard-statistic">
             <div class="stats_bock">
                 <div class="text-stats">
-                    <h3>Statistics</h3>
+                    <h2>Statistics</h2>
                     <p>From 1-15 june, 2022</p>
                 </div>
                 <img src="assets/images/picture/Pie%20chart%203.png" alt="">
             </div>
         </div>
-    </div>
-</section>
-
-<!--*************************************-->
+    </section>
 
     <div class="tabbar_menu">
         <ul>
@@ -375,5 +369,8 @@
             </li>
         </ul>
     </div>
+</main>
+<script src="assets/js/toggle.js"></script>
+<script src="assets/js/fontawesome.js"></script>
 </body>
 </html>
